<resources>
    <string name="app_name">Froot</string>

    <!--API 관련-->

    <!--구글 로그인-->
    <string name="google_api_client_key" translatable="false">MqwsoGVnU9uPa06gvQGy</string>

    <!--네이버 지도-->
    <string name="naver_api_client_key" translatable="false">cffusdBSZjbG3dKWypex</string>
    <string name="naver_api_client_secret" translatable="false">0yJ9t0Bmfp</string>

    <!--페이스북 로그인-->
    <string name="facebook_app_id" translatable="false">909633955882493</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb909633955882493</string>

    <!--카카오 로그인-->
    <string name="kakao_app_key" translatable="false">6c60440944e2d965b50222cbad72d7a0</string>

    <!--API 관련-->

    <!--imageView Description-->
    <string name="intro_alpha_description" translatable="false">intro background alpha</string>
    <string name="intro_logo_description" translatable="false">intro logo</string>
    <string name="horizontal_line" translatable="false">horizontal line</string>
    <!--imageView Description-->


    <!--UI 관련-->
    <string name="intro_text" translatable="false">What\'s in your food?</string>
    <string name="text_divider" translatable="false">|</string>
    <!--UI 관련-->

    <!--언어-->
    <string name="ko" translatable="false">한국어</string>
    <string name="ja" translatable="false">日本語</string>
    <string name="en" translatable="false">English</string>
    <string name="zh_rCN" translatable="false">简体</string>
    <string name="zh_rTW" translatable="false">繁體</string>
    <!--언어-->

    <!--할랄 설명-->

    <!--할랄 설명-->

    <!--원화-->
    <string name="Won" translatable="false">\uFFE6</string>
    <!--원화-->

    <string name="restaurant_image" translatable="false">식당 이미지</string>
    <string name="store_name" translatable="false">식당 이름</string>
    <string name="store_locale" translatable="false">지역</string>


    <!--식이 유형-->
    <string name="religion" translatable="false">Religion</string>
    <!--식이 유형-->


    <string name="button_exit" translatable="false">Exit</string>
    <string name="input_id" translatable="false">USERNAME</string>
    <string name="input_password" translatable="false">PASSWORD</string>
    <string name="find_id_password" translatable="false">FIND PASSWORD</string>
    <string name="button_login" translatable="false">LOGIN</string>

    <string name="description_google_image" translatable="false">Google Login Image</string>
    <string name="description_facebook_image" translatable="false">Facebook Login Image</string>
    <string name="description_kakao_image" translatable="false">Kakao Login Image</string>

    <string name="text_signUp" translatable="false"> 아직 회원이 아니신가요? </string>
    <string name="button_signUp" translatable="false"> <u>회원 가입</u> </string>

    <string name="text_recommended_food">Recommended food</string>
    <string name="text_halal_certified">Halal official certification</string>
    <string name="text_self_certified">Muslim self-certified</string>
    <string name="text_muslim_friendly">Muslim Friendly</string>
    <string name="text_pork_free">Pork Free</string>
    <string name="content_halal_certified">Halal official certification/ Operator and cook Muslim (at least 1 person)/ Full Halal Menu/ Alcohol not sold</string>
    <string name="content_self_certified">Muslim self-certified/ Operator and cook Muslim (at least 1 person)/ Full Halal Menu/ Alcohol not sold</string>
    <string name="content_muslim_friendly">Some Halal Menus/ Pork untreated</string>
    <string name="content_pork_free">Pork untreated</string>
    <string name="toast_back_pressed">Press again to exit.</string>
    <string name="title_halal_expain_activity">Muslim-friendly restaurant</string>
    <string name="text_agree">Agree</string>
    <string name="content_terms_of_service">Froot offers food screening services based on information from the Food and Drug Administration and the Korea Tourism Organization. All ingredients may not be included.</string>
    <string name="content_terms_of_service_warning">*Please note that there may be unintentional interference depending on the restaurant environment.</string>
    <string name="text_preparing_image">Preparing image</string>
    <string name="text_service_area">Service Area</string>
    <string name="text_selected">Selected</string>
    <string name="toast_multiple_choice">you can choose one or more options in this category</string>
    <string name="title_category_activity">Dietary type</string>
    <string name="title_restaurant_map">Nearby restaurants</string>
    <string name="text_restaurant_recommendation">Restaurant recommendation</string>
    <string name="text_no_data">No Data</string>

</resources>
