<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card="http://schemas.android.com/apk/res-auto"
	android:id="@+id/cardView"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_margin="10dp"
	android:clickable="true"
	android:focusable="true"
	android:foreground="?android:attr/selectableItemBackground"
	android:scrollbars="vertical"
	card:cardCornerRadius="4dp"
	card:cardElevation="2dp">

	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="10dp">


		<ImageView
			android:id="@+id/store_image"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:contentDescription="@string/restaurant_image"
			card:srcCompat="@mipmap/ic_launcher" />

		<TextView
			android:id="@+id/store_locale_textView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/store_locale"
			android:textColor="#000000" />

		<TextView
			android:id="@+id/store_name_textView"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:text="@string/store_name"
			android:textColor="#000000" />

	</LinearLayout>

</android.support.v7.widget.CardView>