<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:card="http://schemas.android.com/apk/res-auto"
	android:id="@+id/cardView"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_margin="10dp"
	android:clickable="true"
	android:focusable="true"
	android:foreground="?android:attr/selectableItemBackground"
	android:scrollbars="vertical"
	card:cardCornerRadius="4dp"
	card:cardElevation="2dp">

	<RelativeLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content">


		<ImageView
			android:id="@+id/restaurant_image"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:contentDescription="@string/restaurant_image"
			android:layout_alignParentTop="true"
			card:srcCompat="@mipmap/ic_launcher" />

		<TextView
			android:id="@+id/restaurant_name"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/store_name"
			android:textColor="#000000"
			android:layout_alignParentStart="true"
			android:layout_below="@+id/restaurant_image"
			android:layout_marginEnd="10dp"/>

		<TextView
			android:id="@+id/restaurant_kind"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/store_locale"
			android:textColor="#000000"
			android:layout_toEndOf="@+id/restaurant_name"
			android:layout_below="@+id/restaurant_image"/>

		<RatingBar
			android:id="@+id/ratingBar"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			style="@style/Base.Widget.AppCompat.RatingBar.Indicator"
			android:layout_alignParentStart="true"
			android:isIndicator="true"
			android:layout_below="@+id/restaurant_name"/>


	</RelativeLayout>

</android.support.v7.widget.CardView>